Spacing fixes in testimonials

--- a/_sass/_layouts/_testimonials.sass
+++ b/_sass/_layouts/_testimonials.sass
@@ -31,17 +31,18 @@
   height: 100%
   opacity: 0
   padding: 0 20px 0 0
+  text-align: center
   transform: translateX(30px)
   transition: all .5s
   width: 100%
 
   &__icon
-    height: 55px
-    margin-bottom: 20px
+    height: 70px
+    margin: 0 auto 30px auto
     opacity: 1
     transform: translateX(30px)
     transition: all .75s
-    width: 55px
+    width: 70px
 
     &--showing
       transform: translateX(0)
@@ -52,7 +53,7 @@
       weight: 300
     line-height: 1.5
     margin: 0 0 30px 0
-    opacity: 0.8
+    opacity: 1
     transform: translateX(30px)
     transition: all 1s
     padding: 0
